--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Build a Survey Form</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div id="container">
   <header class="header">
     <h1 id="title"> Guitar Player Survey Form</h1>
@@ -150,5 +160,7 @@
            </div>  
            <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </div>
-    
-      
+<!-- partial -->
+  
+</body>
+</html>
